--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "braintree": "^3.23.0",
+    "ejs": "^3.1.10",
     "vue": "^3.4.21",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
