--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "braintree": "^3.23.0",
+    "braintree": "^3.24.0",
     "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "jquery": "^3.7.1",
     "vue": "^3.4.21",
     "vue-router": "^4.4.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@rollup/plugin-inject": "^5.0.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.77.6",
     "vite": "^5.2.0"
