--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "braintree": "^3.24.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "jquery": "^3.7.1",
     "vue": "^3.4.21",
     "vue-router": "^4.4.0",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "safe-buffer": "^5.2.1"
   },
   "devDependencies": {
     "@rollup/plugin-inject": "^5.0.5",
